# feature-flow

./: .feature-flow.yml  .gitignore  CHANGELOG.md  FEATURE_CONTEXT.md  LICENSE  README.md  dispatcher.yml  pyproject.toml
.changelogs/: 2026-05-02-design-document-pattern-b-conversion.md  2026-05-02-verify-plan-criteria-pattern-a-conversion.md  2026-05-03-code-review-pattern-b.md  2026-05-03-verify-acceptance-criteria-pattern-b.md  2026-07-04-guardrail-hooks-json-signaling.md  217.md  220.md  221.md  224.md  225.md  226-review-triage.md  228.md  238.md  252.md  254-lazy-load-refs-by-scope.md  255.md
.claude-plugin/: marketplace.json  plugin.json
.feature-flow/design/: design-decisions.md  verification-results.md
.feature-flow/implement/: blockers-and-resolutions.md  patterns-found.md
.github/workflows/: check-references.yml  hook-tests.yml
agents/: task-verifier.md
dispatcher/: __main__.py  cli.py  config.py  db.py  dependencies.py  execute.py  github.py  models.py  pipeline.py  tmux.py  triage.py  wave_planner.py  worker.py  worktree.py
docs/: advisor.md
hooks/: hooks.json
prompts/: find-dispatcher-candidates.md
references/: acceptance-criteria-patterns.md  auto-discovery.md  best-effort-remediation.md  ci-remediation.md  coding-standards.md  conflict-resolution.md  context-checkpoints.md  decision-log-templates.md  feature-flow-metadata-schema.md  git-workflow.md  phase-context-templates.md  project-context-schema.md  review-triage.md  tool-api.md  xml-plan-format-runtime.md  xml-plan-format.md
scripts/: check-skill-references.sh
(+289 files in other folders)
